tests/cases/alloc_certificate/accept/direct_without_alloc_callee.pr
fn inc(x : Int) : Int without alloc = x + 1

fn top(x : Int) : Int without alloc = inc(x)
