tests/cases/alloc_certificate/reject/indirect_call.pr
fn apply(f : (Int) -> Int, x : Int) : Int without alloc = f(x)
